# CurandTest

./: .gitignore  CMakeLists.txt  benchmark_deviceapi.cpp  benchmark_hostapi.cpp  curand_test.cpp  example1.cu  rand_gen.cu  rand_gen.h  readme.md  test_rand_gen.cpp
